--- a/css/layout.css
+++ b/css/layout.css
@@ -1,32 +1,129 @@
 
-
-* {
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
-    font-family: poppins;
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 
-.Body{
 
-    display: flex;
-    flex-direction: column;
-    
-}
+/* ----------------------------------*/
+/*              Header               */
+/* ----------------------------------*/
 
-.Header{
 
+.Header {
     display: flex;
     justify-content: space-between;
 
     padding: 32px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
+    /* box-shadow: 0.3px 0.5px 10px black; */
 }
 
-.Header-ul {
+
+.Header-nav ul{
+
+    display: flex;
+    list-style: none;
+    gap: 40px;
+}
+
+
+.Header-icons ul {
     display: flex;
     gap: 32px;
-
-    list-style: none;
+    
 }
 
+.Header-icons li{
+    list-style: none;
+    
+}
+
+
+
+/* ----------------------------------*/
+/*              Main                 */
+/* ----------------------------------*/
+
+
+.Main{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    width: 100%;
+    height: 100vh;
+    
+
+}
+
+
+.Main-themes {
+    display: flex;
+    justify-content: end;
+    gap: 24px;
+    padding: 32px;
+}
+
+.Main-colorButton {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    border: none;border-radius: 10px;
+    transition: rotate 0.3s ease, transform 0.3s ease ;
+
+}
+
+.Main-colorButton:hover {
+    rotate: 180deg;
+    transform: scale(1.2);
+}
+
+
+#light-mode {
+    background-color: #F6F6F0;
+}
+
+#dark-mode {
+    background-color: #2E2E2E;
+}
+
+#purple-mode {
+    background-color: #352D31;
+}
+
+#green-mode {
+    background-color: #97A75B;
+}
+
+
+
+.Main-intro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+
+   
+}
+
+.Main-h1 {
+    font-size: 120px;
+}
+
+
+
+.Main-img {
+
+    transition: rotate 0.6s ease, transform 0.6s ease;
+
+}
+
+.Main-img:hover {
+    
+    rotate: 180deg;
+    transform: scale(1.2);
+}
